# c3-python-sdk

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  c3-api.yml  create_api.sh  flake.nix  gen_requirements.sh  pyproject.toml  requirements.txt  run_tests.py  setup.py
c3/: account.py  api.py  c3exchange.py  websocket.py
c3/signing/: encode.py  signers.py  types.py
c3/utils/: constants.py  utils.py
c3_signers/: __init__.py  encode.py  sign_order_data.py  signers.py  types.py
examples/: cancelOrders.py  createDelegatedOrders.py  createOrders.py  getBalanceFromDelegated.py  onboarding.py
test/: encoding.py
tests/: encoding.py  encoding_test.py  websocket_test.py
